@@ -122,16 +122,6 @@ PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
            option in the docs page, like e.g. we did for SSLInsecureRenegotiation.
     wrowe asks; you mean <Compatibility> tag?  Yes, of course.
 
- * mod_dir: add FallbackResource directive
-   PR 47184
-   Trunk patch: http://svn.apache.org/viewvc?view=rev&revision=785425
-                http://svn.apache.org/viewvc?view=rev&revision=795450
-   2.2.x patch: http://people.apache.org/~niq/patches/47184.patch
-                (identical but for offsets, but patch failed on trunk version)
-                plus docs patch from r795450
-   +1: niq, pgollucci
-   +1: rbowen - After much debate on IRC, we've agreed on FallbackResource as being the right name for this.
-
   *) core authnz: improve misleading error message.  PR 38322.
      Trunk: N/A
      2.2.x: https://issues.apache.org/bugzilla/attachment.cgi?id=25698
